--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                             <button class="follow" onclick="followBtnChange(flw1)">Follow</button>
                         </div>
                         <div class="follow-account flex">
-                            <img src="images/profile-img/_img.jpeg" class="follow-img" alt="">
+                            <img src="images/profile-img/vishal.jpeg" class="follow-img" alt="">
                             <address class="address">
                                 <span class="follow-name verified">Vishal Rajput</span>
                                 <div class="follow-workplace">Student</div>
